--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,15 +3,16 @@
     "com.guciodevs.simple-min-max-slider": "https://github.com/GucioDevs/SimpleMinMaxSlider.git#upm",
     "com.unity.ai.navigation": "2.0.4",
     "com.unity.animation.rigging": "1.3.0",
-    "com.unity.collab-proxy": "2.3.1",
-    "com.unity.ide.rider": "3.0.28",
+    "com.unity.collab-proxy": "2.5.2",
+    "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.recorder": "5.1.0",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.recorder": "5.1.1",
     "com.unity.render-pipelines.universal": "17.0.3",
     "com.unity.splines": "2.6.1",
-    "com.unity.terrain-tools": "5.1.0",
-    "com.unity.test-framework": "1.4.4",
-    "com.unity.timeline": "1.8.6",
+    "com.unity.terrain-tools": "5.1.2",
+    "com.unity.test-framework": "1.4.5",
+    "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
